--- a/sass/style.css
+++ b/sass/style.css
@@ -412,7 +412,6 @@ body {
   transform: rotate(0deg);
 }
 .screens .sub-section .screen-item.active .screen-box {
-  display: block;
   opacity: 1;
   margin-top: 60px;
 }
@@ -422,7 +421,7 @@ body {
 .screens .sub-section .screen-item.active .screen-box.active .screen-regular img {
   opacity: 1;
   transform: scale3d(0.3, 0.3, 0.3);
-  transition: transform 1.5s cubic-bezier(1, -0.51, 0, 1.56) 900ms, margin-top 100ms ease-in-out 200ms;
+  transition: transform 1.5s cubic-bezier(1, -0.51, 0, 1.56) 300ms, margin-top 100ms ease-in-out 0ms;
 }
 .screens .sub-section .screen-item.active .screen-box.active .screen-regular.active img {
   height: 80vh;
@@ -435,15 +434,23 @@ body {
   text-align: center;
 }
 .screens .sub-section .screen-item.active .screen-box .screen-regular img {
-  margin-top: -130vh;
-  transition: margin-top 2s linear 1.2s, opacity 2s linear 500ms;
+  transition: margin-top 1s linear 500ms, opacity 2s linear 500ms;
 }
 .screens .sub-section .screen-item .screen-box {
-  display: none;
   opacity: 0;
   transition: all 100ms linear 500ms;
   height: 100vh;
   overflow: hidden;
+}
+.screens .sub-section .screen-item .screen-box.active .screen-regular {
+  opacity: 0;
+  text-align: center;
+}
+.screens .sub-section .screen-item .screen-box.active .screen-regular img {
+  opacity: 0;
+  transition: opacity 1s linear 100s;
+  transform: scale3d(0.3, 0.3, 0.3);
+  margin-top: -130vh;
 }
 .screens .sub-section .screen-item .screen-box .screen-regular {
   opacity: 0;
@@ -453,6 +460,7 @@ body {
   opacity: 0;
   transition: opacity 1s linear 100s;
   transform: scale3d(0.3, 0.3, 0.3);
+  margin-top: -130vh;
 }
 .screens .sub-section .screen-item .article-title {
   text-align: center;
