--- a/sass/style.css
+++ b/sass/style.css
@@ -434,11 +434,11 @@ body {
   text-align: center;
 }
 .screens .sub-section .screen-item.active .screen-box .screen-regular img {
-  transition: margin-top 1s linear 500ms, opacity 2s linear 500ms;
+  transition: margin-top 1s linear 100ms, opacity 2s linear 50ms;
 }
 .screens .sub-section .screen-item .screen-box {
   opacity: 0;
-  transition: all 100ms linear 500ms;
+  transition: opacity 100ms linear 0ms;
   height: 100vh;
   overflow: hidden;
 }
