--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -90,7 +91,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -196,9 +198,9 @@ select {
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type=button],
-[type=reset],
-[type=submit] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
@@ -206,9 +208,9 @@ button,
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -217,9 +219,9 @@ button::-moz-focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -237,7 +239,8 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -269,9 +272,10 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -280,8 +284,8 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -289,7 +293,7 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type=search] {
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -299,7 +303,7 @@ textarea {
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type=search]::-webkit-search-decoration {
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -350,6 +354,41 @@ template {
 /* typography ======================= */
 /* layout ======================= */
 /* HEEADER ============ */
+.site-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  -webkit-transition: all 2s;
+  transition: all 2s;
+}
+
+.header-menu ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header-menu ul li a {
+  padding: 1.4rem;
+  color: #f15a24;
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
 /* MAIN CONTENT ============ */
 body {
   margin: 0;
@@ -367,6 +406,7 @@ body {
   position: relative;
   background-color: #f15a24;
 }
+
 .screens .section-title {
   color: #fff;
   text-align: left;
@@ -376,24 +416,41 @@ body {
   padding-left: 20px;
   font-weight: 300;
 }
+
 .screens .sub-section {
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: row nowrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
 }
+
 .screens .sub-section .screen-item {
   position: relative;
   min-height: 100vh;
   min-width: 0;
   margin-left: 50px;
-  box-sizing: border-box;
-  flex: 0 0 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 0px;
+          flex: 0 0 0;
+  -webkit-transition: -webkit-box-flex 2s linear;
+  transition: -webkit-box-flex 2s linear;
   transition: flex 2s linear;
+  transition: flex 2s linear, -webkit-box-flex 2s linear, -ms-flex 2s linear;
 }
+
 .screens .sub-section .screen-item.active {
-  flex: 1 0 40vw;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 40vw;
+          flex: 1 0 40vw;
   margin-left: 0;
 }
+
 .screens .sub-section .screen-item.active .article-title {
   text-align: center;
   color: #fff;
@@ -401,56 +458,75 @@ body {
   background-color: transparent;
   padding: 15px;
   width: 100%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 20px;
   position: absolute;
   top: 0;
   left: 0;
   min-width: 300px;
   width: 100%;
-  transform-origin: 0 0;
-  transform: rotate(0deg);
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
 }
+
 .screens .sub-section .screen-item.active .screen-box {
   display: block;
   opacity: 1;
   margin-top: 60px;
 }
+
 .screens .sub-section .screen-item.active .screen-box .screen-regular {
   text-align: center;
 }
+
 .screens .sub-section .screen-item.active .screen-box .screen-regular img {
   opacity: 1;
-  transform: scale3d(0.3, 0.3, 0.3);
+  -webkit-transform: scale3d(0.3, 0.3, 0.3);
+          transform: scale3d(0.3, 0.3, 0.3);
+  -webkit-transition: -webkit-transform 100ms ease-in-out 2s;
+  transition: -webkit-transform 100ms ease-in-out 2s;
   transition: transform 100ms ease-in-out 2s;
+  transition: transform 100ms ease-in-out 2s, -webkit-transform 100ms ease-in-out 2s;
 }
+
 .screens .sub-section .screen-item.active .screen-box .screen-regular.active img {
   height: 80vh;
   width: auto;
   margin: auto;
-  transform: scale3d(1, 1, 1);
+  -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
 }
+
 .screens .sub-section .screen-item .screen-box {
   display: none;
   opacity: 0;
+  -webkit-transition: all 1s linear 1s;
   transition: all 1s linear 1s;
 }
+
 .screens .sub-section .screen-item .screen-box .screen-regular img {
   opacity: 0;
 }
+
 .screens .sub-section .screen-item .article-title {
   text-align: center;
   color: #f15a24;
   margin-top: 0px;
-  transform-origin: 0 0;
-  transform: rotate(90deg);
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
   position: absolute;
   top: 0;
   left: 0;
   width: 100vh;
   background-color: #fff;
   padding: 15px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-weight: 100;
 }
 
@@ -486,8 +562,12 @@ img {
   height: auto;
 }
 
+.logopng {
+  max-width: 250px;
+  height: auto;
+}
+
 /**
 MAIN STYLES
  */
-
 /*# sourceMappingURL=style.css.map */
