Animation events setup

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,4 +16,14 @@
     color: $color__orange;
     font-weight: bold;
     font-size: 1.3rem;
-}  
+}
+
+.logopng{
+    max-width: 150px;
+    height: auto;
+    padding: 0 0 0 20px;
+}
+
+.site-header h1{
+    margin: 0;
+}
