--- a/sass/layout/sections/_screens.scss
+++ b/sass/layout/sections/_screens.scss
@@ -151,7 +151,7 @@
                padding: 15px;
                box-sizing: border-box;
                font-weight: 100;
-
+               cursor:pointer;
 
            }
 
