--- a/sass/layout/sections/_top.scss
+++ b/sass/layout/sections/_top.scss
@@ -1,3 +1,131 @@
 .top{
-  height: calc(100vw-100px);
+    height: 100vh;
+
+    .sub-section{
+        display: grid;
+        grid-template-columns: 1.7fr 1fr;
+        padding-top: 100px;
+        height: 100vh;
+        box-sizing: border-box;
+
+        .app-info{
+          align-self: center;
+
+           .article-title{
+             color: $color__orange;
+             font-weight: 400;
+             text-align: center;
+             font-size: 24px;
+             text-transform: uppercase;
+             font-style: italic;
+             transform: translateX(150px);
+             opacity: 0;
+             transition: all 2s ease-in-out;
+
+             &.active{
+               transform: translateX(0px);
+               opacity: 1;
+             }
+
+           }
+
+          .app-cafes{
+
+            display: flex;
+            margin: auto;
+            width: 100%;
+            flex-flow: row wrap;
+            justify-content: center;
+
+
+              .cafe{
+                width: 15vw;
+                background: white;
+                border: 3px solid $color__orange;
+                margin: 10px;
+                display: flex;
+                padding: 20px;
+                border-radius: 20px;
+
+                -webkit-box-shadow: 18px 28px 16px -25px rgba(241,90,36,0.35);
+                -moz-box-shadow: 18px 28px 16px -25px rgba(241,90,36,0.35);
+                box-shadow: 18px 28px 16px -25px rgba(241,90,36,0.35);
+
+                transform: rotateZ(90deg);
+                transition: all 1s linear;
+                opacity: 0;
+
+                &.active{
+                  opacity: 1;
+                  transform: rotateZ(0deg);
+                }
+
+                img{
+                  width: 80%;
+                  height: auto;
+                  margin: auto;
+                  transition: transform 500ms cubic-bezier(.5,-.75,.7,2);
+
+                  &:hover{
+                    transform: scale3d(1.3,1.3,1.3);
+                  }
+
+                }
+
+                &.unioncafe{
+
+                  img{
+                    transition: transform 500ms cubic-bezier(.5,-.75,.7,2);
+
+                    &:hover{
+                      transform: scale3d(1.1,1.1,1.1);
+                    }
+
+                  }
+
+                }
+
+              }
+
+              }
+
+          }
+
+        .app-welcome-screen{
+          position: relative;
+          justify-content: center;
+          display: flex;
+
+          .screen-item{
+            position: absolute;
+            bottom: -750px;
+            width: 80%;
+            margin: auto;
+            text-align: center;
+            opacity: 0.6;
+            transition: bottom 2s linear, opacity 2s linear;
+
+            &.active{
+              opacity: 1;
+              bottom: -200px;
+            }
+
+            .screen-box{
+
+              .screen-regular{
+
+                img{
+                  display: block;
+                }
+
+              }
+
+            }
+
+          }
+
+        }
+
+    }
+
 }
