--- a/sass/media/_images.scss
+++ b/sass/media/_images.scss
@@ -2,7 +2,9 @@ img{
   max-width: 100%;
   height: auto;
 }
+
 .logopng {
-  max-width: 250px;
+  max-width: 90px;
   height: auto;
+  padding: 15px 15px 5px 15px;
 }
