--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,93 +1,100 @@
-// .footer-class {
-//     display: grid;
-//     grid-template-columns: repeat(3, 1fr);
-//     grid-gap: 0.7rem;
-// }
-// .fas {
-//     padding-right: 0.5rem;
-// }
 
-// .footer-class {
-//     max-width: 98%;
-//     margin: auto;
-// }
-// .footer-main {
-//     grid-column: 2/4;
-//     text-align: center;
-// }
-
-// .footer-icons {
-//     display: flex;
-//     justify-content: center;
-// }
-// .footer-icons p {
-//     padding: 1rem;
-//     border-bottom: none;
-// }
-// .footer-copyright  p {
-//     border-bottom: 2px solid $color__black;
-//     padding: 1rem;
-// }
-
-// .fab {
-//     font-size: 2rem;
-//     padding: 1rem;
-//     // border: 2px solid $color__orange;
-//     border-radius: 50%;
-//     color: $color__orange;
-// }
-
-footer {
-    position: relative;
+footer{
+    background-color: $color__orange;
+    color: white;
+    text-align: center;
+    margin-top: 1rem;
 }
-
 .footer-class {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    text-align: center;
-    grid-gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0.7rem;
+    padding-top: 2rem;
+    max-width: 98%;
+    margin: auto;
 }
-.footer-subscribe {
-    grid-column: 1/-1;
-}
-.footer-icons {
-    display: flex;
-    justify-content: center;
-    // background: $color__orange;
-    // border-bottom: 1px solid black;
-}
-.footer-text {
-    padding: 2rem;
-}
-.footer-contact {
-    align-items: center;
-}
-.fab {
-    padding: 1rem;
-    font-size: 2.2rem;
-}
-.footer-information {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.footer-information p{
-    padding-right: 0.8rem;
+.fas {
+    padding-right: 0.5rem;
 }
 
-.footer-information p{
-    border-right: 1px solid black;
+/* FOOTER FIRST CHILD ==================== */
+.footer-text {
+    max-width: 800px;
+    margin: auto;
+    line-height: 1.8rem;
 }
-.footer-information p:nth-of-type(4){
-    border-right: none;
+.footer-text p {
+    font-size: 1.3rem;
+    margin: 0;
+}
+.footer-text h2 {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 0.9rem;
+}
+
+
+/* FOOTER SECOND CHILD ==================== */
+
+.footer-information {
+    align-items: center;
+}
+.footer-information p {
+    border: 1px solid $color_bs1;
+    max-width: 200px;
+    margin: 0.5rem auto 0.5rem auto;;
+    padding: 0.6rem;
 }
 .footer-information p i {
-    padding: 0.5rem;
+    padding-right: 0.9rem;
 }
-.footer-copyright p {
-   color: $color__orange;
+.footer-information h2 {
+    padding: 0;
+    padding-bottom: 0.5rem;
+    margin: 0;
 }
 
+
+
+/* FOOTER THIRD CHILD ==================== */
+
+
+.footer-subscribe p {
+    font-size: 2rem;
+    padding: 0;
+}
+
+.footer-subscribe h2 {
+    margin: 0;
+    padding: 0;
+}
+
+
+/* FOOTER FOURTH CHILD ==================== */
+
+
 .footer-icons {
-    grid-column: 3;
+    display: flex;
+    justify-content: center;
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.footer-icons p {
+    border-bottom: none;
+    color: white;
+}
+.footer-copyright {
+    grid-column: 2;
+}
+.footer-copyright  p {
+    border-bottom: 2px solid $color_bs1;
+    padding: 1rem;
+}
+
+
+.fab {
+    font-size: 2rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
 }
