--- a/style.css
+++ b/style.css
@@ -348,8 +348,53 @@ template {
 
 /* variables ======================= */
 /* typography ======================= */
+h2 {
+  padding: 0.6rem;
+}
+
 /* layout ======================= */
 /* HEEADER ============ */
+.site-header {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  width: 100%;
+  position: -webkit-sticky;
+  position: fixed;
+  top: 0px;
+  left: 0;
+  z-index: 100000;
+  transition: all 2s;
+  border-bottom: 5px solid #f15a24;
+}
+
+.header-menu ul {
+  display: flex;
+}
+
+.header-menu {
+  overflow: hidden;
+}
+
+.header-menu ul li a {
+  padding: 1.4rem;
+  color: #f15a24;
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
+.header-menu ul li a:hover {
+  background-color: #f15a24;
+  color: #fff;
+  transition: all 0.5s;
+}
+
+.site-header h1 {
+  margin: 0;
+}
+
 /* MAIN CONTENT ============ */
 body {
   margin: 0;
@@ -357,6 +402,28 @@ body {
   background-color: #fff;
   color: #000;
   font-family: "Roboto", sans-serif;
+}
+
+.main-section {
+  min-height: 100vh;
+  background-color: #f15a24;
+}
+
+.main-section.alternate {
+  background-color: #fff;
+}
+
+.section-title {
+  color: #fff;
+  font-weight: 300;
+}
+
+.main-section.alternate .section-title {
+  color: #f15a24;
+}
+
+.article-title {
+  font-weight: 100;
 }
 
 /* SECTIONS ============ */
@@ -374,7 +441,6 @@ body {
   font-size: 30px;
   padding-top: 15px;
   padding-left: 20px;
-  font-weight: 300;
 }
 .screens .sub-section {
   height: 100vh;
@@ -475,7 +541,150 @@ body {
   background-color: #fff;
   padding: 15px;
   box-sizing: border-box;
-  font-weight: 100;
+  cursor: pointer;
+}
+
+/* TOP SECTION ============ */
+.top {
+  height: calc(100vw-100px);
+}
+
+/* TEAM SECTION =========== */
+.team {
+  display: grid;
+  grid-template-rows: 0.1fr 1fr;
+  background-color: #fff;
+}
+
+.team h1 {
+  flex-basis: 100%;
+}
+
+.team figure {
+  display: flex;
+  flex-flow: row wrap;
+  text-align: center;
+  justify-content: center;
+}
+
+.team figure div {
+  flex-basis: 25%;
+}
+
+.team figure img {
+  width: 55%;
+  height: auto;
+  padding: 0.8rem;
+  box-sizing: border-box;
+  border-radius: 50%;
+  border-left: 1px solid #f15a24;
+  border-right: 1px solid #f15a24;
+}
+
+.team figure img:hover {
+  transform: rotate(90deg);
+  transform: scale(1.2);
+  transition: all 0.9s;
+}
+
+/* FOOTER CONTENT ============*/
+footer {
+  background-color: #f15a24;
+  color: white;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.footer-class {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.7rem;
+  padding-top: 2rem;
+  max-width: 98%;
+  margin: auto;
+}
+
+.fas {
+  padding-right: 0.5rem;
+}
+
+/* FOOTER FIRST CHILD ==================== */
+.footer-text {
+  max-width: 800px;
+  margin: auto;
+  line-height: 1.8rem;
+}
+
+.footer-text p {
+  font-size: 1.3rem;
+  margin: 0;
+}
+
+.footer-text h2 {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 0.9rem;
+}
+
+/* FOOTER SECOND CHILD ==================== */
+.footer-information {
+  align-items: center;
+}
+
+.footer-information p {
+  border: 1px solid #fffdf7;
+  max-width: 200px;
+  margin: 0.5rem auto 0.5rem auto;
+  padding: 0.6rem;
+}
+
+.footer-information p i {
+  padding-right: 0.9rem;
+}
+
+.footer-information h2 {
+  padding: 0;
+  padding-bottom: 0.5rem;
+  margin: 0;
+}
+
+/* FOOTER THIRD CHILD ==================== */
+.footer-subscribe p {
+  font-size: 2rem;
+  padding: 0;
+}
+
+.footer-subscribe h2 {
+  margin: 0;
+  padding: 0;
+}
+
+/* FOOTER FOURTH CHILD ==================== */
+.footer-icons {
+  display: flex;
+  justify-content: center;
+  grid-column: 2;
+  grid-row: 3;
+}
+
+.footer-icons p {
+  border-bottom: none;
+  color: white;
+}
+
+.footer-copyright {
+  grid-column: 2;
+}
+
+.footer-copyright p {
+  border-bottom: 2px solid #fffdf7;
+  padding: 1rem;
+}
+
+.fab {
+  font-size: 2rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
 }
 
 /* layout ======================= */
@@ -496,6 +705,26 @@ a {
 }
 
 /* HEEADER ============ */
+.download-btn .google {
+  max-width: 29% !important;
+  height: auto;
+  padding: 1rem;
+}
+
+.download-btn .apple {
+  max-width: 31.4% !important;
+  height: auto;
+  padding: 1rem;
+}
+
+.footer-subscribe button {
+  -webkit-appearance: none;
+  appearance: none;
+  padding: 0.45rem;
+  background-color: #000;
+  color: #fff;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -504,9 +733,20 @@ img {
 /* Navigation ======================= */
 /* site ======================= */
 /* forms ======================= */
+input {
+  width: 300px;
+  height: 4vh;
+  margin-top: 1rem;
+}
+
 /* media ======================= */
 img {
   max-width: 100%;
+  height: auto;
+}
+
+.logopng {
+  max-width: 250px;
   height: auto;
 }
 
