--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -53,4 +53,8 @@ body {
 /* TEAM SECTION =========== */
 @import "sections/team";
 
+/* TEAM TESTIMONIALS =========== */
+@import "sections/testimonials";
+
+
 
