--- a/sass/layout/sections/_features.scss
+++ b/sass/layout/sections/_features.scss
@@ -1,4 +1,5 @@
 .features-container{
+  min-height: 90vh;
 
   .sub-section{
     display: flex;
@@ -17,6 +18,8 @@
         margin: auto 40px;
         width: 270px;
         height: 300px;
+        opacity: 0;
+        transform: translateY(100px);
 
         background-color: $color__orange;
         border-radius: 15px;
@@ -53,28 +56,33 @@
             margin: 0;
           }
 
+
         }
 
         &.feature-1{
-          transition: transform 2s linear   ;
+          transition: transform .5s linear 1s, opacity .5s linear 1s,  box-shaddow  1s linear   ;
         }
 
         &.feature-2{
-          transition: transform 2s linear  ;
+          transition: transform .5s linear 1.2s, opacity .5s linear 1.2s,  box-shaddow  1s linear  ;
         }
 
         &.feature-3{
-          transition: transform 2s linear  ;
+          transition: transform .5s linear 1.6s, opacity .5s linear 1.6s, box-shaddow  1s linear  ;
         }
 
 
         &.active{
           opacity: 1;
-          transform: translateX(0);
+          transform: translateY(0);
         }
 
         &:hover{
-          transform: rotateY(360deg);
+
+          -webkit-box-shadow: 0px 39px 40px -11px $color_bs;
+          -moz-box-shadow: 0px 39px 40px -11px $color_bs;
+          box-shadow: 0px 39px 40px -11px $color_bs;
+
         }
 
 
