--- a/sass/layout/sections/_testimonials.scss
+++ b/sass/layout/sections/_testimonials.scss
@@ -1,3 +1,5 @@
+#
+
 
 /* TESTIMONIAL IMAGES============= */
 .testimonials .sub-section img {
@@ -18,6 +20,10 @@
     align-self: center;
 }
 .sub-section .testimonial {
+    width: 300px;
+    height: 400px;
+    border-radius: 20px;
+
     display: grid;
     grid-template-rows: 1fr 1fr;
     align-items: center;
@@ -25,10 +31,13 @@
     background-color: $color__white;
     color: $color__orange;
     max-width: 40%;
-    height: auto;
-    margin-bottom: 1rem !important;
     margin: auto;
     padding: 15px;
+
+    -webkit-box-shadow: 3px 4px 20px 2px #5a1414;
+    -moz-box-shadow:3px 4px 20px 2px #5a1414;
+    box-shadow: 3px 4px 20px 2px #5a1414;
+
 }
 
 
@@ -55,14 +64,16 @@
 /* VISIBLITY OF OTHER TESTIMONIALS */
 
 .testimonial.testimonial-user3 {
-    display: none;
+    //display: none;
 }
 .testimonial.testimonial-user4 {
-    display: none;
+    //display: none;
 }
 .testimonial.testimonial-user5 {
-    display: none;
+    //display: none;
 }
 .testimonial.testimonial-user6 {
-    display: none;
+    //display: none;
 }
+
+.
